Refactored api logic into controllers
